syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

service AuthenticationService {
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc Claims(ClaimsRequest) returns (ClaimsResponse) {}
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	Claims claims = 1;
}

message LogoutRequest {}

message LogoutResponse {}

message ClaimsRequest {}

message ClaimsResponse {
	Claims claims = 1;
}

enum Audience {
	ACCESS = 0;
}

message Claims {
	string iss = 1;
	string sub = 2;
	Audience aud = 3;
	google.protobuf.Timestamp iat = 4;
	google.protobuf.Timestamp exp = 5;
}
